fixing x overflow

--- a/style/content.css
+++ b/style/content.css
@@ -27,7 +27,9 @@
 /* content */
 section.content-landing{
     padding: 0 20px;
-    width: 100dvw;
+    width: 100%;
+    max-width: 100dvw;
+    box-sizing: border-box;
 }
 section.content-landing nav{
     padding: 50px 0 0;
@@ -37,6 +39,7 @@ main.filter-content{
     min-height: 100dvh;
     width: 100%;
     padding: 0;
+    box-sizing: border-box;
 }
 main.filter-content .container{
     position: relative;
@@ -103,4 +106,11 @@ main.filter-content .container .filterable-cards .card .card-body{
 main.filter-content .container .filterable-cards .card .card-body .tags{
     display: flex;
     gap: .5em;
+}
+
+@media screen and (width >= 412px){
+    main.filter-content .container .filterable-cards .card{
+        flex-basis: calc(100% - 40px);
+        min-width: 0;
+    }
 }
